--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,13 @@
         android:layout_marginTop="18dp"
         android:text="SHARE" />
 
+    <TextView
+        android:id="@+id/hybrid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="22sp"
+        android:layout_marginTop="18dp"
+        android:text="HYBRID" />
+
 </LinearLayout>
