支付模块封装

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,13 @@
         android:layout_marginTop="18dp"
         android:text="HYBRID" />
 
+    <TextView
+        android:id="@+id/pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="22sp"
+        android:layout_marginTop="18dp"
+        android:text="PAY" />
+
 </LinearLayout>
